[tool.poetry]
name = "k3samt"
version = "0.1.0"
description = ""
authors = ["Stijn Hoop <stijn@sandcat.nl>"]

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.8.0"
lxml-stubs = "^0.3.1"
black = "^22.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
